# Pure3XEngenie

./: .gitignore  ARCHITECTURE.md  Build_error.report  CMakeLists.txt  Engine.cpp  FORMATOS_SUPORTADOS.md  LICENSE  MemoryManager.cpp  MemoryManager.h  README.md  README_backup.md  README_backup_v0.1.1.md  README_v0.1.3_Update.md  README_v0.1.4_Alpha.md  README_v0.1.5_Alpha.md  README_v0.1.6_Alpha.md  README_v0.1.7_Alpha.md  README_v0.1.8_Alpha.md  README_v0.1.9_Alpha.md  README_v0.2.0_Alpha.md  README_v0.2.3_Alpha.md  README_v0.2.4_Alpha.md  README_v0.2.5_Alpha.md  build_and_report.sh  build_termux.sh  erro.txt  gradle.properties  local.properties  settings.gradle  start_engine.sh
.github/workflows/: c-cpp.yml
AndroidRuntime/: erro.txt  local.properties
AndroidRuntime/app/: build.gradle
Config/: ConfigManager.cpp  ConfigManager.cpp.  ConfigManager.h  config.ini
Core/: Engine.cpp  Engine.h
Core/Boot/: Boot.cpp  Boot.h
Core/Config/: config_manager.h
Core/Logs/: Log.cpp  Log.h
Core/Network/: network_manager.cpp  network_utils.cpp
Core/System/: System.cpp
CoreEmulation/: Engine.cpp  Engine.h
CoreEmulation/Config/: config_manager.cpp
CoreEmulation/android/: AndroidBridge.cpp  AndroidBridge.h
CoreEmulation/audio/: AudioManager.cpp
CoreEmulation/boot/: BootAndroid.cpp  BootAndroid.h  BootFirmware.cpp  BootFirmware.h  BootGraphics.cpp  BootGraphics.h  BootHardware.cpp  BootHardware.h  BootMemory.cpp  BootMemory.h  BootModules.cpp  BootModules.h  BootPanel.cpp  BootPanel.h  BootSystem.cpp  BootSystem.h  SplashScreen.cpp  SplashScreen.h  boot_system.cpp  boot_system.h
CoreEmulation/bus/: MemoryBus.cpp  MemoryBus.h
CoreEmulation/cache/: FileCache.h
CoreEmulation/cell/: CellEngine.cpp  CellEngine.h  CellSystem.cpp  CellSystem.h
CoreEmulation/config/: ConfigFile.cpp  ConfigManager.h  config_manager.cpp  config_manager.h
CoreEmulation/disc/: Disc.h  GameManager.cpp  GameManager.h
CoreEmulation/emulator/: CPU.cpp  CPU.h  Emulator.cpp  Emulator.h  SPU.cpp
CoreEmulation/firmware/: FirmwareManager.cpp  FirmwareManager.h
CoreEmulation/gamemodules/: ModuleManager.cpp  ModuleManager.h
CoreEmulation/gpu/: CommandBuffer.h  CommandProcessor.h  RSXState.cpp  RSXState.h
CoreEmulation/graphics/: CubeRenderer.cpp  CubeRenderer.h
CoreEmulation/hardware/: HardwareInfo.h
CoreEmulation/input/: ButtonMap.cpp  ButtonMap.h  ButtonMap.h.  DualShock3.cpp  InputManager.cpp  InputManager.h  InputState.cpp  InputState.h
CoreEmulation/jit/: BlockCache.cpp  BlockCache.h  JITCompiler.cpp  JITCompiler.h  MemoryMap.cpp  MemoryMap.h  NCE.h
CoreEmulation/kernel/: Kernel.cpp  Kernel.h  Process.cpp  ThreadScheduler.cpp
CoreEmulation/loader/: ExecutableLoader.cpp  ExecutableLoader.h  FirmwareInfo.cpp  FirmwareManager.cpp  FirmwareManager.h  Loader.cpp  Loader.h  LoaderContext.h
CoreEmulation/logger/: Log.cpp  Log.h  LogLevel.h  logger.h
CoreEmulation/memory/: AddressTranslator.cpp  AddressTranslator.h  MemoryAllocator.cpp  MemoryManager.cpp  MemoryManager.h  MemoryMap.cpp  VirtualMemory.cpp  VirtualMemory.h
CoreEmulation/menu/: ConfigMenu.cpp  ConfigMenu.h  (+6 more)
Cubo3D/: CMakeLists.txt  build.gradle  erro.txt  gradle.properties  settings.gradle
Cubo3D/android/: P3XE.keystore  criar_assinatura.sh  gradle.properties  local.properties  minha.keystore  proguard-rules.pro  settings.gradle
Cubo3D/android/app/: build.gradle
Cubo3D/android/app/src/main/: AndroidManifest.xml
Cubo3D/android/app/src/main/java/com/pure3x/cubo3d/: MainActivity.java
Cubo3D/android/app/src/main/res/layout/: activity_main.xml
Cubo3D/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
Cubo3D/android/app/src/main/res/values/: colors.xml  launcher_colors.xml  strings.xml  styles.xml  themes.xml
Cubo3D/android/app/src/main/res/xml/: settings.xml
Cubo3D/android/gradle/wrapper/: gradle-wrapper.properties
Cubo3D/app/: build.gradle  build.gradle.bak
Cubo3D/app/src/main/: AndroidManifest.xml
Cubo3D/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Cubo3D/app/src/main/java/: EngineLoader.java  FirmwareManager.java  GameManager.java  GameScanner.java  InputManager.java  MainActivity.java  PPUManager.java  Pure3XCamera.java  Pure3XCameraController.java  Pure3XEngine.java  Pure3XEngineInfo.java  Pure3XFPSCounter.java  Pure3XMVP.java  Pure3XMaterial.java  Pure3XMesh.java  Pure3XObject.java  Pure3XPerformanceMonitor.java  Pure3XRenderQueue.java  Pure3XRenderSystem.java  Pure3XRenderer.java  Pure3XResourceManager.java  Pure3XRotation.java  Pure3XRuntime.java  Pure3XScene.java  Pure3XSceneManager.java  Pure3XSystem.java  Pure3XTimer.java  RSXManager.java  RuntimeManager.java  SplashActivity.java
Cubo3D/app/src/main/java/com/pure3x/cubo3d/: CubeGLSurfaceView.java  CubeRenderer.java  MainActivity.java
Cubo3D/app/src/main/res/anim/: fade_in.xml  logo_scale.xml
Cubo3D/app/src/main/res/layout/: activity_game_selector.xml  activity_main.xml  activity_splash.xml
Cubo3D/app/src/main/res/values/: strings.xml
Cubo3D/src/: main.cpp
Docs/: Architecture.md  BootPanel.md  CPU_Architecture.md  Cell_Execution_Model.md  DevelopmentNotes.md  DevelopmentRoadmap.md  GameLibrary.md  Graphics.md  JIT.md  OfficialDocumentation.md
android/: gradle.properties  settings.gradle
android/app/src/main/cpp/: CMakeLists.txt  NativeBridge.cpp
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
core/: Engine.cpp  Engine.h
docs/: Input_System_Roadmap.md  ROADMAP_v0.2.0_ALPHA.md  ROADMAP_v0.2.4_EXECUTION.md
scripts/: build.sh
src/: main.cpp
viewer/: Application.cpp  Application.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  EGLContext.cpp  EGLContext.h  Engine.cpp  Engine.h  FPSCounter.cpp  FPSCounter.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  Light.cpp  Light.h  Logger.cpp  Logger.h  Material.cpp  Material.h  Matrix4.cpp  Matrix4.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  Projection.cpp  Projection.h  Pure3XEGLContext.cpp  Pure3XEGLContext.h  RenderLoop.cpp  RenderLoop.h  RenderPass.cpp  RenderPass.h  (+27 more)
(+305 files in other folders)
